# mcp-server

./: .env.example  .gitignore  Dockerfile  PROJECT_MAP.md  README.md  docker-compose.example.yaml  pyproject.toml
clients/browser_agent/: .env.example  README.md  __init__.py  agent.py  browser.py  client.py  config.py  requirements.txt  start_windows.bat  start_windows.py
docs/: IDENTITY.md  PROJECT_MAP.md  SELF_HEALING_MEMO.md
src/mcp_server/: __main__.py  app.py  config.py  schemas.py  security.py  start.sh  utils.py
src/mcp_server/base/: data_structures.py  logging_config.py
src/mcp_server/model/: gemini_api_client.py
src/mcp_server/remote/: __init__.py  connection_manager.py  page_proxy.py
src/mcp_server/services/: gmail_service.py
src/mcp_server/tools/: __init__.py  base.py
src/mcp_server/tools/execute_mysql/: execute_mysql.py
src/mcp_server/tools/execute_python/: execute_python.py
src/mcp_server/tools/execute_shell/: execute_shell.py
src/mcp_server/tools/get_python_version/: get_python_version.py
src/mcp_server/tools/gmail/: gmail.py
src/mcp_server/tools/image_recognition/: image_recognition.py
src/mcp_server/tools/install_package/: install_package.py
src/mcp_server/tools/read_file/: __init__.py  read_file.py
src/mcp_server/tools/replace_block/: replace_block.py
src/mcp_server/tools/replace_lines/: replace_lines.py
src/mcp_server/tools/sqlite_query/: __init__.py  sqlite_query.py
src/mcp_server/tools/tmdb_search/: __init__.py  tmdb_search.py
src/mcp_server/tools/tmdb_search/modules/: __init__.py  client.py  constants.py  formatters.py  models.py
src/mcp_server/tools/web_ollama/: web_ollama.py
src/mcp_server/tools/web_playwright/: web_playwright.py
src/mcp_server/tools/write_file/: __init__.py  write_file.py
