[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "4.0.0"
description = "MCP (Model Context Protocol) Server with Modular Tool Architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nate", email = "nate@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Authentication & Security
    "python-dotenv>=1.0.0",
    
    # Database
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    
    # HTTP & Web
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "websockets>=12.0",
    
    # Media & Image
    "Pillow>=10.0.0",
    "mutagen>=1.47.0",
    
    # AI & ML
    "google-generativeai>=0.3.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_server = ["py.typed"]

[tool.ruff]
line-length = 180
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pyright]
extraPaths = [".."]
reportMissingImports = "warning"
